--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <script src="scripts/compra.js"></script>
+    <script defer src="scripts/compra.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -39,15 +40,31 @@
         <h1>Lista de compras</h1>
 
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Nombre de producto" aria-label="productName">
+            <input id="productNameImput" type="text" class="form-control" placeholder="Nombre de producto"
+                aria-label="productName">
             <span class="input-group-text">$</span>
-            <input type="number" class="form-control" placeholder="Precio $$" aria-label="price">
+            <input id="productPriceImput" type="number" class="form-control" placeholder="Precio $$" aria-label="price">
         </div>
         <div class="d-grid gap-2">
             <button class="btn btn-dark" type="button" id="saveProduct">Agregar</button>
         </div>
+        <br>
+        <div class="list">
+            <div class="mt-5">
+                <h3 id="importeTotal">Importe total: $ 0</h3>
+                <ul class="list-group" id="products_list">
+                    <li class="list-group-item">Elemento 1</li>
+                </ul>
+            </div>
 
+        </div>
     </div>
+
+    <footer class="bg-dark text-light py-3" style="position: absolute; bottom: 0; width: 100%;">
+        <div class="container text-center">
+            <p>Desarrollo por. <a href="https://twitter.com/JoaqDeveloper">Joaquín Parrilla</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
