--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
         <br>
         <div class="list">
             <div class="mt-5">
-                <h3 id="importeTotal">Importe total: $ 0</h3>
-                <ul class="list-group" id="products_list">
-                    <li class="list-group-item">Elemento 1</li>
-                </ul>
+                <h3 id="importeTotal"></h3>
+                <ul class="list-group" id="products_list"></ul>
             </div>
 
         </div>
