--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <script src="scripts/utils.js"></script>
+    <script defer src="scripts/storage.js"></script>
     <script defer src="scripts/compra.js"></script>
+    <script defer src="scripts/compra.controller.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -34,11 +37,9 @@
                 </ul>
             </div>
         </div>
-
     </nav>
     <div class="container">
         <h1>Lista de compras</h1>
-
         <div class="input-group mb-3">
             <input id="productNameImput" type="text" class="form-control" placeholder="Nombre de producto"
                 aria-label="productName">
@@ -54,13 +55,11 @@
                 <h3 id="importeTotal"></h3>
                 <ul class="list-group" id="products_list"></ul>
             </div>
-
         </div>
     </div>
-
     <footer class="bg-dark text-light py-3" style="position: absolute; bottom: 0; width: 100%;">
         <div class="container text-center">
-            <p>Desarrollo por. <a href="https://twitter.com/JoaqDeveloper">Joaquín Parrilla</a></p>
+            <p>Desarrollo por. <a href="https://twitter.com/JoaqDeveloper">Joaquín Parrilla</a> | Ssr. Data Engineer</p>
         </div>
     </footer>
 </body>
