agrego funcionalidad clearProductsList

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <ul class="list-group" id="products_list"></ul>
             </div>
         </div>
+        <br><br><br><br> <!-- Mejorar esta chanchada de los br!! -->
+        <button class="btn btn-dark" type="button" id="clearSurtidosList">Vaciar lista</button>
     </div>
     <br>
 </body>
