--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 aria-label="productName">
             <span class="input-group-text">$</span>
             <input id="productPriceImput" type="number" class="form-control" placeholder="Precio $$" aria-label="price">
+            <span class="input-group-text">x</span>
+            <input id="productQuantityInput" type="number" min="1" class="form-control" placeholder="Cantidad"
+                aria-label="price" value="1">
         </div>
         <div class="d-grid gap-2">
             <button class="btn btn-dark" type="button" id="saveProduct">Agregar</button>
