FIX - index.html - input-group mb-3

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
     </nav>
     <div class="container">
         <h1>Lista de compras</h1>
-        <div class="input-group mb-3">
+        <div class="input-group mb-1">
             <input id="productNameImput" type="text" class="form-control" placeholder="Nombre de producto"
                 aria-label="productName">
+        </div>
+        <div class="input-group mb-2">
             <span class="input-group-text">$</span>
             <input id="productPriceImput" type="number" class="form-control" placeholder="Precio $$" aria-label="price">
             <span class="input-group-text">x</span>
