Enviar datos a API - Avances

--- a/prelista.html
+++ b/prelista.html
@@ -11,7 +11,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="scripts/utils.js"></script>
-    <script defer src="scripts/storage.js"></script>
+    <script defer src="scripts/config.js"></script>
     <script defer src="scripts/compra.js"></script>
     <script defer src="scripts/precompra.js"></script>
     <script defer src="scripts/precompra.controller.js"></script>
@@ -33,6 +33,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="prelista.html">Lista de pre-compra</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="statistics.html">Estadisticas y Analítica</a>
                     </li>
                 </ul>
             </div>
