- audit_date by user - Graph: modify audit_date in graph

--- a/statistics.html
+++ b/statistics.html
@@ -11,6 +11,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script defer src="scripts/config.js"></script>
+    <script defer src="scripts/utils.js"></script>
     <script defer src="scripts/compra.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
